# tradecryptobot

./: .gitignore  README.md  colab_stock_run.ipynb  docker-compose.yml  dockerfile  lstm_model.pt  main.py  model_config.json  model_info.json  platt_scaler.npz  predict_now.py  price_model.pt  price_model_predictions.npz  pyproject.toml  requirements.txt  stocks_main.py
BTCUSDT_28_12_1/: X.npy  scaler.pkl  y.npy
BTCUSDT_28_4_3/: 42_binary_model.pt  42_price_model.pt  best_model_config.json  features.json  grid_search_results.json  model_config.json  platt_scaler.pkl  scaler.pkl  y.npy
BTCUSDT_28_6_2/: features.json  scaler.pkl  y.npy
DOGEUSDT_28_4_3/: 42_binary_model.pt  42_price_model.pt  scaler.pkl  y.npy
ETHUSDT_28_4_3/: 42_binary_model.pt  42_price_model.pt  scaler.pkl  y.npy
LTCUSDT_28_4_3/: 42_binary_model.pt  42_price_model.pt  scaler.pkl  y.npy
SOLUSDT_28_4_3/: 42_binary_model.pt  42_price_model.pt  scaler.pkl  y.npy
XRPUSDT_28_4_3/: 42_binary_model.pt  42_price_model.pt  features.json  model_config.json  scaler.pkl  y.npy
crypto/: __init__.py  config.py  data_fetch.py  indicators.py  model.py  nlp.py  test.py  trade.py  trade_sim.py  train_model.py  wallet.py
dataset/: X.npy  features.json  y.npy
stocks/: __init__.py  data_fetch.py  model.py  predict_now.py  train_model.py
